--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
            </h2>
                 <ul>
                     <li>
-                        <img src="./images/Mark.jpg" alt="Mark Guerrero">
+                        <img src="./images/Mark.jpg" alt="Mark Guerrero" width="300">
                         <h3>
                             Mark Guerrero
                         </h3>
@@ -126,7 +126,7 @@
                             </p>
                     </li>
                     <li>
-                        <img src="./images/Tom.jpg" alt="Tom Ford">
+                        <img src="./images/Tom.jpg" alt="Tom Ford" width="300">
                         <h3>
                             Tom Ford
                         </h3>
@@ -135,7 +135,7 @@
                             </p>
                     </li>
                     <li>
-                        <img src="./images/Camila.jpg" alt="Camila Garcia">
+                        <img src="./images/Camila.jpg" alt="Camila Garcia" width="300">
                         <h3>
                             Camila Garcia
                         </h3>
@@ -144,7 +144,7 @@
                             </p>
                     </li>
                     <li>
-                        <img src="./images/Daniel.jpg" alt="Daniel Wilson">
+                        <img src="./images/Daniel.jpg" alt="Daniel Wilson" width="300">
                         <h3>
                             Daniel Wilson
                         </h3>
