--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 <body>
     <!--header part-->
     <header>
-        <h3>WebStudio</h3>
-            <nav>
+        <nav>
+        <a href=./index.html>WebStudio</a>
+            
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="./index.html">
                             Studio
                         </a>
                     </li>
@@ -30,7 +31,7 @@
             </nav>
         <ul>
             <li>
-                <a href="#">
+                <a href="mailto:info@devstudio.com">
                     info@devstudio.com
                 </a>
             </li>
@@ -46,7 +47,7 @@
         <!--section one-->
         <section>
             <h1>
-                Effective Solutions for Your Business
+                Effective Solutions <br> for Your Business
             </h1>
                 <button type="button">
                     Order Service
@@ -100,13 +101,13 @@
           </h2>
             <ul>
                 <li>
-                    <img src="./images/img 1.jpg" alt="monitor" width="500px">
+                    <img src="./images/what-are-we-doing-1.jpg" alt="monitor" width="360px">
                 </li>
                 <li>
-                    <img src="./images/img 2.jpg" alt="mobile" width="500px">
+                    <img src="./images/what-are-we-doing-2.jpg" alt="mobile" width="360px">
                 </li>
                 <li>
-                    <img src="./images/img 3.jpg" alt="mobile and laptop" width="500px">
+                    <img src="./images/what-are-we-doing-3.jpg" alt="mobile and laptop" width="360px">
                 </li>
             </ul> 
         </section>
@@ -117,7 +118,7 @@
            </h2>
                 <ul>
                     <li>
-                        <img src="./images/Mark.jpg" alt="Mark Guerrero" width="300">
+                        <img src="./images/our-team-1.jpg" alt="Mark Guerrero" width="264px">
                         <h3>
                             Mark Guerrero
                         </h3>
@@ -126,7 +127,7 @@
                             </p>
                     </li>
                     <li>
-                        <img src="./images/Tom.jpg" alt="Tom Ford" width="300">
+                        <img src="./images/our-team-2.jpg" alt="Tom Ford" width="264px">
                         <h3>
                             Tom Ford
                         </h3>
@@ -135,7 +136,7 @@
                             </p>
                     </li>
                     <li>
-                        <img src="./images/Camila.jpg" alt="Camila Garcia" width="300">
+                        <img src="./images/our-team-3.jpg" alt="Camila Garcia" width="264px">
                         <h3>
                             Camila Garcia
                         </h3>
@@ -144,7 +145,7 @@
                             </p>
                     </li>
                     <li>
-                        <img src="./images/Daniel.jpg" alt="Daniel Wilson" width="300">
+                        <img src="./images/our-team-4.jpg" alt="Daniel Wilson" width="264px">
                         <h3>
                             Daniel Wilson
                         </h3>
@@ -157,9 +158,9 @@
     </main>
         <!--this is the footer-->
         <footer>
-            <h3>
+            <a href="./index.html">
                  Webstudio
-            </h3>
+            </a>
                 <p>
                     Increase the flow of customers and <br> sales for your business with digital <br> marketing & growth solutions
                 </p>
