--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 <body>
     <!--header part-->
     <header>
-        <nav>
-        <a href=./index.html>WebStudio</a>
-            
-                <ul>
+         <nav>
+            <h1> 
+                <a href=./index.html>
+                    WebStudio
+                </a> 
+            </h1>
+            <ul>
                     <li>
                         <a href="./index.html">
                             Studio
